-changed "Nanjing" victory point to "Nanking"
-changed "Chongqing" victory point to "Chungking"
-took "the" off of faction names
-fixed the coding so changes actually show up

March 28. (v3.28)
-fixed "Germany" localisation error
-changed "German Reich" to "Nazi Germany"
-changed "Soviet Union" to "U.S.S.R."

March 31. (v3.31) (German States Update)
-changed "Galapagos Islands" state to "Galápagos Islands"
-fixed umlaut on "Nendö"
-changed "Ile de France" state to Île de France"
-changed "Rhone" state to "Rhône"
-changed "Pas de Calais" state to "Pas-de-Calais"
-changed "Midi Pyrenees" to "Midi-Pyrénées"
-changed "Sjaelland" to "Sjælland"
-changed "Franken" to "Franconia"
-changed "Hessen" to "Hesse"
-changed "Oberbayern" state to "Upper Bavaria"
-changed "Niederbayern" state to "Lower Bavaria"
-changed "Franken" state to "Franconia"
-changed "Hessen" to "Hesse"
-changed "Westfalen" to "Westphalia"
-changed "Hannover" to "Hanover"
-changed "Thüringen" to "Thuringia"
-changed "Pommern" to "Pomerania"
-changed "Hinterpommern" to "Farther Pomerania"
-changed "Sachsen" to "Saxony"
-changed "Niederschlesien" to "Lower Silesia"
-changed "Oberschlesien" to "Upper Silesia"

April 2. (v4.2) (European Cities, Asian Names)
-changed the adjective for the ROC and PRC to "Sino"
-changed "Siam" (neutrality, democracy) to "Thailand" (Siam changed their name to Thailand in 1939, but in 1942, when they sided with the Japanese, the Allies did not accept the name.)
-fixed Siam localisation (name not showing up)
-changed "Poznan" victory point to "Poznań"
-changed "Lodz" victory point to "Łódź"
-changed "Lwow" victory point to "Lwów"
-changed "Plzen" victory point to "Plzeň" 
-changed "Kosice" victory point to "Košice" 
-changed "Pecs" victory point to "Pécs" 
-changed "Gent" victory point to "Ghent"
-changed "Antwerpen" victory point to "Antwerp"
-changed "Dunkerque" victory point to "Dunkirk"
-changed "Orleans" victory point to "Orléans"

 Copyright 2017 Dick Bong, Ace of Aces