@@ -1,5 +1,6 @@
 ﻿l_english:
  VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! victory points = §Y$POINTS$§!"
+  #Germany
  VICTORY_POINTS_6521:0 "Berlin"
  VICTORY_POINTS_692:0 "Munich"
  VICTORY_POINTS_6469:0 "Essen"
@@ -19,9 +20,11 @@
  VICTORY_POINTS_6488:0 "Frankfurt"
  VICTORY_POINTS_9517:0 "Stuttgart"
  VICTORY_POINTS_11544:0 "Nuremberg"
+  #Denmark
  VICTORY_POINTS_6287:0 "Copenhagen"
  VICTORY_POINTS_3325:0 "Odense"
  VICTORY_POINTS_6364:0 "Aarhus"
+  #Poland
  VICTORY_POINTS_3544:0 "Warsaw"
  VICTORY_POINTS_9427:0 "Krakow"
  VICTORY_POINTS_362:0 "Danzig" #To be changed later?
@@ -31,28 +34,35 @@
  #VICTORY_POINTS_6558:0 "Poznan" #Poznań
  #VICTORY_POINTS_9508:0 "Lodz" #Łódź
  #VICTORY_POINTS_11479:0 "Lwow" #Lwów
+  #Austria
  VICTORY_POINTS_11666:0 "Vienna"
  VICTORY_POINTS_673:0 "Innsbruck"
  VICTORY_POINTS_688:0 "Salzburg"
  VICTORY_POINTS_9648:0 "Graz"
+  #Czechoslovakia
  VICTORY_POINTS_11542:0 "Prague"
  VICTORY_POINTS_3569:0 "Brno"
  #VICTORY_POINTS_6418:0 "Plzen" Plzeň
  #VICTORY_POINTS_6573:0 "Kosice" Košice
  VICTORY_POINTS_9692:0 "Bratislava"
+  #Hungary
  VICTORY_POINTS_9660:0 "Budapest"
  #VICTORY_POINTS_11610:0 "Pecs" Pécs
  VICTORY_POINTS_11659:0 "Debrecen"
+  #Holland
  VICTORY_POINTS_391:0 "Amsterdam"
  VICTORY_POINTS_3211:0 "The Hague"
  VICTORY_POINTS_9498:0 "Rotterdam"
  VICTORY_POINTS_6496:0 "Eindhoven"
+  #Belgium
  VICTORY_POINTS_516:0 "Brussels"
  VICTORY_POINTS_3516:0 "Namur"
  #VICTORY_POINTS_6560:0 "Gent" #Ghent
  #VICTORY_POINTS_6598:0 "Antwerpen" #Antwerp
- VICTORY_POINTS_11519:0 "Liége"
+ #VICTORY_POINTS_11519:0 "Liége" #Liège
+  #Luxembourg
  #VICTORY_POINTS_6583:0 "Luxemburg"
+  #France
  VICTORY_POINTS_11506:0 "Paris"
  VICTORY_POINTS_6613:0 "Lyon"
  VICTORY_POINTS_9737:0 "Bordeaux"
@@ -75,7 +85,7 @@
  VICTORY_POINTS_9495:0 "Rennes"
  VICTORY_POINTS_9503:0 "Strasbourg"
  VICTORY_POINTS_9559:0 "Metz"
- VICTORY_POINTS_9642:0 "Besancon"
+ #VICTORY_POINTS_9642:0 "Besancon" #Besançon
  VICTORY_POINTS_9898:0 "Montpellier"
  VICTORY_POINTS_9909:0 "Nice"
  VICTORY_POINTS_11465:0 "Nantes"
@@ -84,27 +94,38 @@
  VICTORY_POINTS_11548:0 "Calais"
  VICTORY_POINTS_11563:0 "Rouen"
  VICTORY_POINTS_13011:0 "Reims"
+  #Switzerland
  VICTORY_POINTS_9620:0 "Berne"
  VICTORY_POINTS_663:0 "Zürich"
+  #Serbia
  VICTORY_POINTS_11586:0 "Belgrade"
+  #Macedonia
  VICTORY_POINTS_3882:0 "Skopje"
- VICTORY_POINTS_3924:0 "Split"
+  #Slovenia
  VICTORY_POINTS_9627:0 "Ljubljana"
+  #Croatia
+ VICTORY_POINTS_3924:0 "Split"
  VICTORY_POINTS_11581:0 "Zagreb"
+  #Bosnia
  VICTORY_POINTS_11899:0 "Sarajevo"
+  #Bulgaria
  VICTORY_POINTS_949:0 "Sofia"
  VICTORY_POINTS_6923:0 "Plovdiv"
  VICTORY_POINTS_9783:0 "Varna"
+  #Romania
  VICTORY_POINTS_9617:0 "Bucharest"
- VICTORY_POINTS_690:0 "Brasov"
- VICTORY_POINTS_3663:0 "Ploiesti"
+ #VICTORY_POINTS_690:0 "Brasov" #Brașov
+ #VICTORY_POINTS_3663:0 "Ploiesti" #Ploiești
  VICTORY_POINTS_6682:0 "Arad"
  VICTORY_POINTS_6711:0 "Cluj"
- VICTORY_POINTS_9716:0 "Iasi"
+ #VICTORY_POINTS_9716:0 "Iasi" Iași
+  #Albania
  VICTORY_POINTS_9914:0 "Tirana"
+  #Greece
  VICTORY_POINTS_4109:0 "Athens"
  VICTORY_POINTS_9940:0 "Heraklion"
  VICTORY_POINTS_11818:0 "Thessaloniki"
+  #Turkey
  VICTORY_POINTS_11747:0 "Ankara"
  VICTORY_POINTS_9833:0 "Istanbul"
  VICTORY_POINTS_940:0 "Konya"
@@ -112,10 +133,11 @@
  VICTORY_POINTS_4112:0 "Izmir"
  VICTORY_POINTS_9893:0 "Gaziantep"
  VICTORY_POINTS_9932:0 "Trabzon"
+  #Spain
  VICTORY_POINTS_3938:0 "Madrid"
  VICTORY_POINTS_9764:0 "Barcelona"
  VICTORY_POINTS_740:0 "Bilbao"
- VICTORY_POINTS_758:0 "Coruna"
+ #VICTORY_POINTS_758:0 "Coruna" #A Coruña
  VICTORY_POINTS_875:0 "Cordoba"
  VICTORY_POINTS_885:0 "Burgos"
  VICTORY_POINTS_3816:0 "Zaragoza"
@@ -126,8 +148,10 @@
  VICTORY_POINTS_11707:0 "Oviedo"
  VICTORY_POINTS_11825:0 "Valladolid"
  VICTORY_POINTS_4135:0 "Gibraltar"
+  #Portugal
  VICTORY_POINTS_11805:0 "Lisbon"
  VICTORY_POINTS_9817:0 "Porto"
+  #Italy
  VICTORY_POINTS_9904:0 "Rome"
  VICTORY_POINTS_3780:0 "Milan"
  VICTORY_POINTS_819:0 "Naples"
@@ -138,6 +162,7 @@
  VICTORY_POINTS_10074:0 "Palermo"
  VICTORY_POINTS_11584:0 "Venice"
  VICTORY_POINTS_11837:0 "Taranto"
+  #Sweden
  VICTORY_POINTS_6050:0 "Stockholm"
  VICTORY_POINTS_156:0 "Falun"
  VICTORY_POINTS_383:0 "Göteborg"
